| Summary: | ASTERISK-29091: Crash when ast_translator_build_path fails | ||
| Reporter: | Jasper van der Neut (jvanderneut) | Labels: | |
| Date Opened: | 2020-09-23 03:51:25 | Date Closed: | 2020-10-14 12:00:01 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Channels |
| Versions: | 16.13.0 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Debian buster, self compiled asterisk 16.x | Attachments: | |
| Description: | Multiple times a day asterisk would crash right after logging this:
{noformat} asterisk[8647]: WARNING[13888]: translate.c:488 in ast_translator_build_path: No translator path: (starting codec is not valid) {noformat} {{ast_translator_build_path}} is called from {{set_format}}, where the result is not checked against NULL before dereferencing the returned pointer. This a regression caused by [https://github.com/asterisk/asterisk/commit/c4558236573ac599e6664c47e4db19d8a8eb953e] | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-09-23 03:51:26.946-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2020-09-23 03:57:28.603-0500 What channels are actually in use to cause this? Do you have a backtrace as well and console output? By: Friendly Automation (friendly-automation) 2020-09-30 07:09:58.730-0500 Change 14935 merged by Friendly Automation: channels: Don't dereference NULL pointer [https://gerrit.asterisk.org/c/asterisk/+/14935|https://gerrit.asterisk.org/c/asterisk/+/14935] By: Friendly Automation (friendly-automation) 2020-09-30 08:00:27.083-0500 Change 15007 merged by Friendly Automation: channels: Don't dereference NULL pointer [https://gerrit.asterisk.org/c/asterisk/+/15007|https://gerrit.asterisk.org/c/asterisk/+/15007] By: Friendly Automation (friendly-automation) 2020-09-30 08:27:23.801-0500 Change 15006 merged by George Joseph: channels: Don't dereference NULL pointer [https://gerrit.asterisk.org/c/asterisk/+/15006|https://gerrit.asterisk.org/c/asterisk/+/15006] By: Friendly Automation (friendly-automation) 2020-09-30 08:27:35.434-0500 Change 15005 merged by George Joseph: channels: Don't dereference NULL pointer [https://gerrit.asterisk.org/c/asterisk/+/15005|https://gerrit.asterisk.org/c/asterisk/+/15005] By: Sean Bright (seanbright) 2020-09-30 08:48:09.786-0500 [~jvanderneut], can you please respond to [~jcolp]'s questions? This fix seems like a band-aid on a larger problem. By: Asterisk Team (asteriskteam) 2020-10-14 12:00:00.954-0500 Suspended due to lack of activity. This issue will be automatically re-opened if the reporter posts a comment. If you are not the reporter and would like this re-opened please create a new issue instead. If the new issue is related to this one a link will be created during the triage process. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1]. [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines | ||